# server/routes/message.go
@@ -14,7 +14,8 @@ func Message(group *echo.Group) {
 
 	group.POST("/text", controller.SendText)
 	group.POST("/audio", controller.SendAudio)
-	group.POST("/document", controller.SendDocument)
+	group.POST("/image", controller.SendImage)
+	group.POST("/video", controller.SendVideo)
 }
 
 func MessageEVO(group *echo.Group) {
